[package]
name = "divideo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["divideo_db", "divideo_http", "divideo_models"]

[workspace.dependencies]
divideo_db.path = "./divideo_db"
divideo_http.path = "./divideo_http"
divideo_models.path = "./divideo_models"
anyhow = "1.0.72"
rusqlite = { version = "0.29.0", features = ["uuid"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
divideo_db = { path = "./divideo_db" }
divideo_http = { path = "./divideo_http" }
divideo_models = { path = "./divideo_models" }
rusqlite = { version = "0.29.0", features = ["uuid"] }
uuid = { version = "1.4.1", features = ["v4"] }
